--- a/style.css
+++ b/style.css
@@ -1,24 +1,49 @@
-body {
-    font-family: Georgia, Times, 'Times New Roman', sans-serif;
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
+*{
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
+body {
+    font-family: Georgia, Times, 'Times New Roman', sans-serif;
+
+}
+.card{
+    background-color: #a78604;
+    border: solid black;
+    margin: auto;
+    width: 620px;
+    
+    
+}
+.title {
     color: #a78604;
     background: black;
     text-align: center;
+    padding: 10px;
+    width: 586px;
+    margin: 1px auto;
 }
 
-h2 {
+.sub {
     color: #a78604;
+    background-color: black;
     text-align: center;
+    padding: 10px;
+    width: 586px;
+    margin:1px auto;
 }
 
 img {
-    width: 400px;
-    height: auto;
+    width: 586px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border: solid black;
 }
 
 .nav { 
@@ -28,7 +53,23 @@ img {
     padding: 0;
 }
 .nav li {
-    display: inline-block;
+    display:block;
     font-size: 20px;
-    padding: 15px;
+    background-color: black;
+    margin: 1px auto;
+    padding: 1px;
+    width: 586px;
+}
+ul li:hover{
+    background-color: #a78604;
+}
+a {
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+}
+.back{
+    background-color: #a78604;
+    margin: 1px auto 0px;
+    width: 620px;
+    border: solid black;
 }
